<resources>
    <string name="app_name">超一問二答</string>
    <string name="app_name_short">一問二答</string>
    <string name="context_header">inf</string>
    <string name="first_sort_name">First Sort</string>
    <string name="second_sort_name">Second Sort</string>
    <string name="last_sort_name">Last Sort</string>
    <string name="data_save_toast">保存しました</string>
    <string name="debug_on_toast">デバッグモードがオンになりました。</string>
    <string name="debug_off_toast">デバッグモードがオフになりました。</string>
    <string name="edit_act_title">作成/編集</string>
    <string name="settings_act_title">設定</string>
    <string name="delete_name">削除</string>
    <string name="edit_name">編集</string>
    <string name="address_act_name">分類変更</string>
    <string name="refresh_name">refresh</string>
    <string name="settings_names">設定</string>
    <string name="random_name">ランダム</string>
    <string name="id_name">登録順</string>
    <string name="pri_name">正答率</string>
    <string name="count_name">解答回数</string>
    <string name="address_name">分類順</string>
    <string name="name_name">名前順</string>
    <string name="EditActivity_context_name"></string>
    <string name="hyouji_name">表示設定</string>
    <string name="setting_1">正答率の表示</string>
    <string name="setting_2">idの表示</string>
    <string name="setting_3">分類の表示</string>
    <string name="setting_4">要素数の表示</string>
    <string name="setting_imv">デバッグモード</string>
    <string name="setting_i">一括削除</string>
    <string name="setting_">削除実行</string>

    <string name="true_text">正</string>
    <string name="false_text">誤</string>

    <string name="up_name">昇順</string>
    <string name="down_name">降順</string>

    <string name="today">今日</string>
    <string name="allday">累計</string>
    <string name="count">要素数</string>
    <string name="tf_name">測定の表示</string>
</resources>