<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_menu_view"
        android:title="search"
        android:orderInCategory="100"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:orderInCategory="100"
        android:title="@string/settings_names"
        app:showAsAction="never"

        />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_name"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_delete_24"
        app:showAsAction="never"
        />

    <item
    android:id="@+id/action_replace"
    android:orderInCategory="100"
    android:title="@string/refresh_name"
    android:icon="@drawable/ic_baseline_refresh_24"
    app:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/action_address"
        android:title="@string/address_act_name"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_tf"
        android:title="@string/tf_name"
        android:orderInCategory="100"
        app:showAsAction="never"

        />
</menu>