<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_sort_name"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/firstBl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioFirstUp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/up_name" />

                    <RadioButton
                        android:id="@+id/radioFirstDown"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/down_name" />
                </RadioGroup>
            </LinearLayout>

            <RadioGroup
                android:id="@+id/firstSortRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_name" />

                <RadioButton
                    android:id="@+id/radioButton15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pri_name" />

                <RadioButton
                    android:id="@+id/radioButton16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/count_name" />

                <RadioButton
                    android:id="@+id/radioButton17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_name" />

                <RadioButton
                    android:id="@+id/radioButton18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/id_name" />

                <RadioButton
                    android:id="@+id/radioButton19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/random_name" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="3dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_sort_name"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/secondBl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioSecondUp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/up_name" />

                    <RadioButton
                        android:id="@+id/radioSecondDown"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/down_name" />
                </RadioGroup>
            </LinearLayout>

            <RadioGroup
                android:id="@+id/secondSortRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_name" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pri_name" />

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/count_name" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_name" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/id_name" />

                <RadioButton
                    android:id="@+id/radioButton9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/random_name" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="3dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_sort_name"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/lastBl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioLastUp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/up_name" />

                    <RadioButton
                        android:id="@+id/radioLastDown"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/down_name" />
                </RadioGroup>
            </LinearLayout>

            <RadioGroup
                android:id="@+id/lastSortRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/id_name" />

                <RadioButton
                    android:id="@+id/radioButton10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/random_name" />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="3dp"
                android:background="?android:attr/listDivider" />

            <Switch
                android:id="@+id/switch3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/setting_i"
                android:textColor="#777"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/settingsAddressRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkedButton="@id/addressRadioGroup"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/questionEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/radioButton01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:enabled="false"
                    android:text="0" />

                <RadioButton
                    android:id="@+id/radioButton02"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:enabled="false"
                    android:text="1" />

                <RadioButton
                    android:id="@+id/radioButton03"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:enabled="false"
                    android:text="2" />

                <RadioButton
                    android:id="@+id/radioButton04"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:enabled="false"
                    android:text="3" />

                <RadioButton
                    android:id="@+id/radioButton05"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:enabled="false"
                    android:text="4" />
            </RadioGroup>

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/setting_" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="3dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/hyouji_name"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/settingSwitch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/switch_margin"
                android:layout_weight="1"
                android:text="@string/setting_1"
                android:textSize="@dimen/switch_text_size" />

            <Switch
                android:id="@+id/settingSwitch2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/switch_margin"
                android:layout_weight="1"
                android:text="@string/setting_2"
                android:textSize="@dimen/switch_text_size"/>

            <Switch
                android:id="@+id/settingSwitch3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/switch_margin"
                android:layout_weight="1"
                android:text="@string/setting_3"
                android:textSize="@dimen/switch_text_size" />

            <Switch
                android:id="@+id/settingSwitch4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/switch_margin"
                android:textSize="@dimen/switch_text_size"
                android:text="@string/setting_4"
                />

            <Switch
                android:id="@+id/switchim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/setting_imv"
                android:textSize="16sp"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/linerlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="invisible">

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />

                <Button
                    android:id="@+id/inputButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:minWidth="20dip"
                    android:text="Input"
                    tools:paddingHorizontal="0dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>